--- a/css/css.css
+++ b/css/css.css
@@ -40,6 +40,8 @@ body
 	margin:10px auto 10px auto;
 	border:#EE7728 1px solid;
 	position:relative;
+	/*  */
+	height: 30px;  /*限制主選單高度*/
 }
 .ti
 {
@@ -90,6 +92,10 @@ body
 	line-height:30px;
 	padding:2px 10px 2px 10px;
 	margin:7px 1px 7px 1px;
+	/*  */
+	top:-15px;
+	left:75px;
+	z-index:10;
 }
 .mainmu2:hover
 {
